@@ -120,15 +120,28 @@ function clickedUserEvent(id) {
 
 
 function displayEventDetails(event) {
-  $detailsList = $('#event-details-list')
+  $titleDiv = $('.el-title');
+  $detailsList = $('#event-details-list');
+  $venueList = $('#venue-list');
+  $titleDiv.html('');
   $detailsList.html('');
+  $venueList.html('');
+  var name = $('<h4>').html(event.eventName);
   var descriptionEl = $('<li>').html(event.webDescription);
   var eventUrl = $('<a>', {
                    text: event.eventUrl,
                    href: event.eventUrl
                 });
+  var venueUrl = $('<a>', {
+                   text: event.venueName,
+                   href: event.venueDetailUrl
+                });
+  var address = $('<p>').html('<em>' + event.address + '</em>')
+  $titleDiv.append(name);
   $detailsList.append(descriptionEl);
   $detailsList.append(eventUrl);
+  $venueList.append(venueUrl).append(address);
+
   $('#event-details-div').show();
   $('#event-details-close').show();
 
