@@ -32,6 +32,10 @@ eventlist {
   font-size: 2em;
   background-color: black;
   color: white;
+  margin: 0 50 0 50;
+  a {
+    color: white;
+  }
 }
 
 .right {
@@ -91,17 +95,17 @@ em {
   border: 1px dotted black;
   z-index: 9998;
   background-color: white;
-  opacity: .9;
+  opacity: .95;
   height: 120%;
-
   -moz-box-shadow: 0px 10px 10px #000;
     -webkit-box-shadow: 0px 10px 10px #000;
 
   .search-form {
-    top: -150px;
-    height: 50%;
+    margin-top: -100px;
+    height: 80%;
     overflow: scroll;
     overflow-x: hidden;
+
   }
 
   .header {
@@ -134,6 +138,11 @@ em {
   background-color: lightblue;
   padding: 10px;
   border-radius: 10px;
+}
+
+.venue-info {
+  border-left: 1px solid black;
+  padding: 10px;
 }
 
 .float {
