@@ -1,6 +1,14 @@
 
 
 <div id="event-details-div" display="none">
-    <ul id="event-details-list"></ul>
-    <button id="event-details-close" style="display: none">Close</button>
+    <div class="el-title eight columns">
+    </div>
+    <div class="four columns right">
+      <ul id="event-details-list" ></ul>
+      <button id="event-details-close" style="display: none">Close</button>
+    </div>
+    <div class="three columns right venue-info">
+      <ul id="venue-list"></ul>
+    </div>
+
 </div>
