@@ -27,3 +27,10 @@
 6/16/14 5:31PM
 - stylized list
 - functioning search by date
+
+6/17/14 6:07PM
+- features now include search by location (both by address and by ip), and default limit by set 5 miles
+- pop out search bar
+- eliminated root index
+- starting to look good!
+
